# forecast

./: .env  Cargo.toml  README.md  Shuttle.toml  init.sql
src/: main.rs
src/routes/: index.rs  mod.rs  stats.rs  weather.rs
templates/: index.html  stats.html  weather.html
