[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.189"
shuttle-axum = "0.30.1"
shuttle-runtime = "0.30.1"
shuttle-shared-db = { version = "0.30.1", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["macros", "any", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.33.0", features = ["full"] }
